--- a/SketchingTools/app/src/main/AndroidManifest.xml
+++ b/SketchingTools/app/src/main/AndroidManifest.xml
@@ -11,14 +11,21 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".baby_home.BabyHomeActivity">
+        android:theme="@style/myTheme">
+
+        <activity
+            android:name=".baby_home.BabyHomeActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".baby_home.AddNotesActivity" />
+
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
