更改整体风格，添加RecyclerView
1、标题主体颜色使用橙色；
2、修改popupWindow的弹出框效果
3、GridView弃用，改为RecyclerView

--- a/SketchingTools/app/build.gradle
+++ b/SketchingTools/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.3'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'com.yalantis:ucrop:1.3.+'
 }
